fix for jumping polygon

--- a/src/image/image.scss
+++ b/src/image/image.scss
@@ -18,7 +18,7 @@
 }
 
 .amp-dc-poi-image {
-  .hotspot {
+  [data-type="poi-hotspot"] {
     cursor: pointer;
     z-index: 3;
     width: 30px;
@@ -30,19 +30,19 @@
     transition: transform .2s ease-in-out;
   }
 
-  .hotspot:hover {
+  [data-type="poi-hotspot"]:hover {
     -webkit-transition: -webkit-transform .2s ease-in-out;
     transition: transform .2s ease-in-out;
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
   }
 
-  .hotspot:active {
+  [data-type="poi-hotspot"]:active {
     opacity: 0.5;
     cursor: default;
   }
 
-  .hotspot:after {
+  [data-type="poi-hotspot"]:after {
     content: '';
     position: absolute;
     top: 0;
@@ -53,7 +53,7 @@
     background: url('https://dev-solutions.s3.amazonaws.com/poi-js-lib/svg/target.svg') no-repeat 0 0;
   }
 
-  .hotspot:before {
+  [data-type="poi-hotspot"]:before {
     content: '';
     border-radius: 30px;
     -moz-border-radius: 30px;
@@ -81,7 +81,7 @@
   svg g polygon {
     fill: transparent;
     opacity: 1;
-    stroke: #ececec;
+    stroke: #000000;
     stroke-width: 3px;
     stroke-dasharray: 15;
     stroke-linecap: round;
